<resources>
    <string name="app_name">VictimizacionApp</string>
    <string name="titulo_encuesta">ENCUESTA NACIONAL ESPECIALIZADA SOBRE VICTIMIZACIÓN 2017</string>
    <string name="marco_encuesta">MARCO GENERAL DE LA ENCUESTA</string>
    <string name="capitulo100_titulo">CAPÍTULO 100: DATOS DE LA VIVIENDA (Jefe/a del hogar o persona de 18 y más años de edad)</string>
    <string name="capitulo200_titulo">CAPÍTULO 200: CARACTERÍSTICAS DE LOS RESIDENTES HABITUALES DEL HOGAR (Jefe/a del hogar o persona de 18 y más años de edad)</string>
    <string name="capitulo300_titulo">CAPÍTULO 300: PERCEPCIÓN DE INSEGURIDAD (Persona seleccionada)</string>
    <string name="capitulo400_titulo">CAPÍTULO 400: PREGUNTAS FILTRO (Persona seleccionada)</string>
    <string name="capitulo500_titulo">CAPÍTULO 500: CARACTERIZACIÓN DE LOS HECHOS DELICTIVOS COMETIDOS AL HOGAR</string>
    <string name="capitulo600_titulo">CAPÍTULO 600: CARACTERIZACIÓN DE LOS HECHOS DELICTIVOS COMETIDOS A LA PERSONA</string>
    <string name="capitulo700_titulo">CAPÍTULO 700: CARACTERÍSTICAS GENERALES DE LA PERSONA SELECCIONADA</string>
    <string name="capitulo700_descripcion">A  continuación,  le  haré  algunas  preguntas  para  saber  si  usted presenta alguna limitación o dificultad PERMANENTE, que le impida o dificulte desarrollarse normalmente en sus actividades diarias</string>
    <string name="capitulo100_sgObservacion">OBSERVACIÓN DIRECTA</string>
    <string name="capitulo200_sg12oMas">PARA 12 Y MÁS AÑOS DE EDAD</string>
    <string name="capitulo200_sgDeterminacionInf">DETERMINACIÓN DEL INFORMANTE</string>
    <string name="capitulo200_sg15oMas">PARA 15 Y MÁS AÑOS DE EDAD/RESIDENTE HABITUAL</string>
    <string name="capitulo300_sgPercepcion">PERCEPCIÓN DE INSEGURIDAD</string>
    <string name="capitulo300_sgMedidasSeguridad">MEDIDAS DE SEGURIDAD</string>
    <string name="capitulo300_sgCambioHabitos">CAMBIO DE HÁBITOS</string>
    <string name="capitulo300_sgParticipacionCiu">PARTICIPACIÓN CIUDADANA</string>
    <string name="capitulo300_sgMedioscomunicacion">MEDIOS DE COMUNICACIÓN</string>
    <string name="capitulo400_sgSeccion401">SECCIÓN 401: PREGUNTAS FILTRO DE LOS HECHOS DELICTIVOS COMETIDOS A LA PERSONA</string>
    <string name="capitulo400_sgSeccion401_descripcion">Sr/a. ahora, quisiera hacerle preguntas sobre algunas situaciones que le pudo haber pasado solo a usted, en la calle, en el parque, en un bar, en el transporte público o en algún otro lugar, dentro del territorio nacional. Por favor, NO considere lo que le haya sucedido a otros integrantes de su hogar y/o familia.</string>
    <string name="capitulo400_sgSeccion402">SECCIÓN 402: PREGUNTAS FILTRO DE LOS HECHOS DELICTIVOS COMETIDOS AL HOGAR</string>
    <string name="capitulo400_sgSeccion402_descripcion">Ahora me gustaría hacerle preguntas sobre algunas situaciones que usted o algún integrante de su hogar puedo haber pasado, dentro del territorio nacional.</string>
    <string name="capitulo600_sgSeccion601">SECCIÓN 601: ROBO, HURTO E INTENTO DE ROBO</string>
    <string name="capitulo600_sgSeccion602">SECCIÓN 602: AGRESIÓN FÍSICA Y VERBAL (Para los últimos cinco eventos delictivos)</string>
    <string name="capitulo600_sgSeccion_UltimosCinco">Para los últimos cinco eventos delictivos</string>
    <string name="capitulo600_sgSeccion_LugarOcurrencia">Lugar de ocurrencia (georreferenciación)</string>
    <string name="capitulo700_sgDiscapacidad">DISCAPACIDAD</string>
    <string name="capitulo700_sgEducacion">EDUCACIÓN</string>
    <string name="capitulo700_sgAutoidentificacion">AUTOIDENTIFICACIÓN ÉTNICA</string>
    <string name="capitulo700_sgCondicion">CONDICIÓN DE ACTIVIDAD (OCUPADOS Y DESOCUPADOS)</string>
    <string name="capitulo700_sgOcupados">OCUPADOS</string>
    <string name="capitulo700_sgDesocupados">DESOCUPADOS</string>
    <string name="capitulo100_pregunta1">1.TIPO DE VIVIENDA</string>
    <string name="capitulo100_pregunta1_sp1">Casa independiente</string>
    <string name="capitulo100_pregunta1_sp2">Departamento en edificio</string>
    <string name="capitulo100_pregunta1_sp3">Vivienda en quinta</string>
    <string name="capitulo100_pregunta1_sp4">Vivienda en casa de vecindad (callejón, solar o corralón)</string>
    <string name="capitulo100_pregunta1_sp5">Choza o cabaña</string>
    <string name="capitulo100_pregunta1_sp6">Vivienda improvisada</string>
    <string name="capitulo100_pregunta1_sp7">Local no destinado para habitación humana</string>
    <string name="capitulo100_pregunta2">2.ACCESO A LA VIVIENDA</string>
    <string name="capitulo100_pregunta2_sp1">Garita o caseta de entrada</string>
    <string name="capitulo100_pregunta2_sp2">Puertas  con  intercomunicador  de  audio  y/o vídeo</string>
    <string name="capitulo100_pregunta2_sp3">Puertas  sin  intercomunicador  de  audio  y/o vídeo</string>
    <string name="capitulo100_pregunta2_sp4">Portero</string>
    <string name="capitulo100_pregunta2_sp5">Muros</string>
    <string name="capitulo100_pregunta2_sp6">Cercas</string>
    <string name="capitulo100_pregunta2_sp8">No se observa ninguna barrera</string>
    <string name="capitulo100_pregunta3">3.EL MATERIAL PREDOMINANTE EN LAS PAREDES EXTERIORES DE LA VIVIENDA ES:</string>
    <string name="capitulo100_pregunta3_sp1">¿Ladrillo o bloque de cemento?</string>
    <string name="capitulo100_pregunta3_sp2">¿Piedra o sillar con cal o cemento?</string>
    <string name="capitulo100_pregunta3_sp3">¿Adobe o tapia?</string>
    <string name="capitulo100_pregunta3_sp4">¿Quincha (caña con barro)?</string>
    <string name="capitulo100_pregunta3_sp5">¿Piedra con barro?</string>
    <string name="capitulo100_pregunta3_sp6">¿Madera?</string>
    <string name="capitulo100_pregunta3_sp7">¿Estera?</string>
    <string name="capitulo100_pregunta4">4.LA VIVIENDA QUE OCUPA ES:</string>
    <string name="capitulo100_pregunta4_sp1">¿Alquilada?</string>
    <string name="capitulo100_pregunta4_sp2">¿Propia, totalmente pagada?</string>
    <string name="capitulo100_pregunta4_sp3">¿Propia, por invasión?</string>
    <string name="capitulo100_pregunta4_sp4">¿Propia, comprándola a plazos?</string>
    <string name="capitulo100_pregunta4_sp5">¿Cedida por otro hogar?</string>
    <string name="capitulo100_pregunta4_sp6">¿Cedida por el centro de trabajo?</string>
    <string name="capitulo100_pregunta4_sp7">¿Cedida por otra institución?</string>
    <string name="capitulo100_pregunta5">5.¿EN CUÁNTO ESTIMA EL MONTO MENSUAL QUE GASTÓ SU HOGAR EN ALIMENTOS?</string>
    <string name="capitulo100_pregunta6">6.¿EN CUÁNTO ESTIMA EL MONTO MENSUAL QUE GASTÓ SU HOGAR EN OTROS BIENES Y/O SERVICIOS? (Considere educación, transporte, vestimenta, etc.; NO incluya gastos de alimentos)</string>
    <string name="capitulo200_pregunta1">1.¿CUÁL ES EL NOMBRE Y APELLIDOS DE CADA UNA DE LAS PERSONAS QUE VIVEN PERMANENTEMENTE EN ESTE HOGAR Y LAS QUE ESTÁN ALOJADAS AQUÍ? INCLUYA A LOS MIEMBROS DEL HOGAR AUSENTES Y RECIÉN NACIDOS</string>
    <string name="capitulo200_pregunta1_nombres">NOMBRES:</string>
    <string name="capitulo200_pregunta1_apellidos">APELLIDOS:</string>
    <string name="capitulo200_pregunta2">2.¿CUÁL ES LA RELACIÓN DE PARENTESCO CON EL JEFE/A DEL HOGAR?</string>
    <string name="capitulo200_pregunta2_sp1">Jefe/a</string>
    <string name="capitulo200_pregunta2_sp2">Esposa/o</string>
    <string name="capitulo200_pregunta2_sp3">Hijo/a</string>
    <string name="capitulo200_pregunta2_sp4">Yerno/Nuera</string>
    <string name="capitulo200_pregunta2_sp5">Nieto/a</string>
    <string name="capitulo200_pregunta2_sp6">Padres/Suegros/as</string>
    <string name="capitulo200_pregunta2_sp7">Otros parientes</string>
    <string name="capitulo200_pregunta2_sp8">Trabajador/a del hogar</string>
    <string name="capitulo200_pregunta2_sp9">Pensionista</string>
    <string name="capitulo200_pregunta2_sp10">Otros no parientes</string>
    <string name="capitulo200_pregunta3">3.¿ES MIEMBRO DEL HOGAR?</string>
    <string name="capitulo200_pregunta4">4.¿SE ENCUENTRA AUSENTE DEL HOGAR 30 DÍAS O MÁS?</string>
    <string name="capitulo200_pregunta5">5.¿ESTÁ PRESENTE EN EL HOGAR 30 DÍAS O MÁS?</string>
    <string name="capitulo200_pregunta6">6.SEXO</string>
    <string name="capitulo200_pregunta6_hombre">Hombre</string>
    <string name="capitulo200_pregunta6_mujer">Mujer</string>
    <string name="capitulo200_pregunta7">7.¿QUÉ EDAD TIENE EN AÑOS CUMPLIDOS?</string>
    <string name="capitulo200_pregunta7_anios">Años:</string>
    <string name="capitulo300_pregunta3">3.¿SABE O A ESCUCHADO SI EN LOS ALREDEDORES DE SU VIVIENDA SUCEDEN O HAN SUCEDIDO LAS SIGUIENTES SITUACIONES DURANTE LOS ÚLTIMOS 12 MESES, ES DECIR ENTRE JUN 15 Y MAY 16.</string>
    <string name="capitulo300_pregunta3_sp1">¿Riñas o peleas en la calle?</string>
    <string name="capitulo300_pregunta3_sp2">¿Reuniones de pandillas o bandas?</string>
    <string name="capitulo300_pregunta3_sp3">¿Venta de productos falsificados?</string>
    <string name="capitulo300_pregunta3_sp4">¿Consumo de bebidas alcohólicas en la calle?</string>
    <string name="capitulo300_pregunta3_sp5">¿Venta clandestina de alcohol?</string>
    <string name="capitulo300_pregunta3_sp6">¿Consumo de droga en la calle?</string>
    <string name="capitulo300_pregunta3_sp7">¿Venta de droga en la calle?</string>
    <string name="capitulo300_pregunta3_sp8">¿Vandalismo?</string>
    <string name="capitulo300_pregunta3_sp9">¿Calles sin iluminación?</string>
    <string name="capitulo300_pregunta3_sp10">¿Prostitución?</string>
    <string name="capitulo300_pregunta3_sp11">¿Disparos frecuentes?</string>
    <string name="capitulo300_pregunta5">5.¿DE CUÁL HECHO DELICTIVO?</string>
    <string name="capitulo300_pregunta5_sp1">Robo de vehículo automotor</string>
    <string name="capitulo300_pregunta5_sp2">Robo de vivienda</string>
    <string name="capitulo300_pregunta5_sp3">Robo sin violencia de sus objetos personales (cartera,mochila, celular)</string>
    <string name="capitulo300_pregunta5_sp4">Robo con violencia de sus objetos personales (cartera,mochila, celular)</string>
    <string name="capitulo300_pregunta5_sp5">Fraude bancario</string>
    <string name="capitulo300_pregunta5_sp6">Estafa (fraude al consumidor)</string>
    <string name="capitulo300_pregunta5_sp7">Vandalismo</string>
    <string name="capitulo300_pregunta5_sp8">Amenaza</string>
    <string name="capitulo300_pregunta5_sp9">Extorsión</string>
    <string name="capitulo300_pregunta5_sp10">Corrupción</string>
    <string name="capitulo300_pregunta5_sp11">Agresión verbal</string>
    <string name="capitulo300_pregunta12">12.DE LAS SIGUIENTES ORGANIZACIONES VECINALES DE SEGURIDAD CIUDADANA, ¿USTED PARTICIPA EN: </string>
    <string name="capitulo300_pregunta12_sp1">Junta Vecinal de Seguridad Ciudadana?</string>
    <string name="capitulo300_pregunta12_sp2">Red de Cooperantes para la Seguridad Ciudadana?</string>
    <string name="capitulo300_pregunta12_sp3">Brigadas de Autoprotección Escolar(BAPES)?</string>
    <string name="capitulo300_pregunta12_sp4">Patrulla Juvenil?</string>
    <string name="capitulo300_pregunta12_sp5">Policía Escolar?</string>
    <string name="capitulo300_pregunta13">13.¿CÓMO SE ENTERA USTED DE LO QUE OCURRE EN MATERIA DE SEGURIDAD CIUDADANA ¿CON QUE FRECUENCIA? EN EL PAÍS Y SU DEPARTAMENTO?</string>
    <string name="capitulo300_pregunta13_sp1">Por noticieros de radio</string>
    <string name="capitulo300_pregunta13_sp2">Por noticieros de televisión</string>
    <string name="capitulo300_pregunta13_sp3">Por la prensa (escrita)</string>
    <string name="capitulo300_pregunta13_sp4">En reuniones familiares/amigos</string>
    <string name="capitulo300_pregunta13_sp5">Por compañeros de trabajo/vecinos</string>
    <string name="texto_otro">Otro</string>
    <string name="texto_otrop">Otro?</string>
    <string name="texto_especifique">Especifique</string>
    <string name="texto_ninguna">NINGUNA</string>
</resources>