<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cap300_pregunta3_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/pregunta_margin"
    android:padding="@dimen/layout_margin"
    android:background="@drawable/borde_layout_preguntas">
    <TextView
        android:id="@+id/c300_pregunta3_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textoMedium"
        android:layout_marginBottom="@dimen/pregunta_margin"
        android:text="@string/capitulo300_pregunta3"/>
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp1"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp2"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp3"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp4"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp5"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp6"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp7"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp8"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp9"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp10"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta3_sp11"
        />
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/texto_otrop"
        />
    <EditText
        android:id="@+id/c300_pregunta3_edittext"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_especifique"
        android:textSize="@dimen/textoSmall"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/c300_pregunta3_checkbox13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/texto_ninguna"
        />
</LinearLayout>