<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cap300_pregunta12_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/pregunta_margin"
    android:padding="@dimen/layout_margin"
    android:background="@drawable/borde_layout_preguntas">
    <TextView
        android:id="@+id/c300_pregunta12_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textoMedium"
        android:text="@string/capitulo300_pregunta12"/>
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta12_sp1"
        />
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta12_sp2"
        />
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta12_sp3"
        />
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta12_sp4"
        />
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/capitulo300_pregunta12_sp5"
        />
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/texto_otrop"
        />
    <EditText
        android:id="@+id/c300_pregunta12_edittext"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_especifique"
        android:textSize="@dimen/textoSmall"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/c300_pregunta12_checkbox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoSmall"
        android:text="@string/texto_ninguna"
        />
</LinearLayout>
