<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cap100_pregunta3_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/pregunta_margin"
    android:padding="@dimen/layout_margin"
    android:background="@drawable/borde_layout_preguntas">
    <TextView
        android:id="@+id/c100_pregunta3_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textoMedium"
        android:text="@string/capitulo100_pregunta3"/>
    <RadioGroup
        android:id="@+id/c100_pregunta3_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp1"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp2"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp3"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp4"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp5"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp6"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitulo100_pregunta3_sp7"
            />
        <RadioButton
            android:layout_margin="@dimen/subpregunta_margin"
            android:id="@+id/c100_pregunta3_radiobutton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_otro"
            />
        <EditText
            android:id="@+id/c100_pregunta3_edittext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_especifique"
            android:visibility="gone"/>
    </RadioGroup>
</LinearLayout>