<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cap300_pregunta13_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/pregunta_margin"
    android:padding="@dimen/layout_margin"
    android:background="@drawable/borde_layout_preguntas">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/c300_pregunta13_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/textoMedium"
            android:text="@string/capitulo300_pregunta13"/>
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/capitulo300_pregunta13_sp1"
            />
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/capitulo300_pregunta13_sp2"
            />
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/capitulo300_pregunta13_sp3"
            />
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/capitulo300_pregunta13_sp4"
            />
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/capitulo300_pregunta13_sp5"
            />
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/texto_otrop"
            />
        <EditText
            android:id="@+id/c300_pregunta13_edittext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_especifique"
            android:textSize="@dimen/textoSmall"
            android:visibility="gone"/>
        <CheckBox
            android:id="@+id/c300_pregunta13_checkbox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoSmall"
            android:text="@string/texto_ninguna"
            />
    </LinearLayout>
</LinearLayout>